<resources>
    <string name="app_name">MYWAY</string>
    <string name="select">%1$s/%2$s</string>
    <string name="no_data">No data</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">listview header hint release</string>
    <string name="refreshing">正在刷新</string>
    <string name="refresh_done">刷新完成</string>
    <string name="list_footer_loading">加载中</string>
    <string name="list_footer_end">已全部加载完</string>
    <string name="footer_network_error">加载失败，点击重新加载</string>
    <string name="start_to_experience">开始体验</string>
    <string name="skip">跳过</string>
    <string name="account">用户名</string>
    <string name="password">密  码</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="oauth_login">第三方登录</string>
    <string name="phone_or_email">手机号</string>
    <string name="auth_code">验证码</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="new_password">新密码（8-20个字符）</string>
    <string name="reconfirm_password">再次确认密码</string>
    <string name="confirm">确 定</string>
    <string name="set_password">设置密码（8-20个字符）</string>
    <string name="myway_agreements">《用户协议与隐私政策》</string>
    <string name="discover">发现</string>
    <string name="message">消息</string>
    <string name="dynamic">动态</string>
    <string name="way">路线</string>
    <string name="transpond">转发</string>
    <string name="just_now">刚刚</string>
    <string name="minute_ago"> 分钟前</string>
    <string name="hour_ago"> 小时前</string>
    <string name="day_ago"> 天前</string>
    <string name="year_ago"> 年前</string>
    <string name="block">屏蔽</string>
    <string name="report">举报</string>
    <string name="delete">删除</string>
    <string name="i_release">我的发布</string>
    <string name="car_ranking">车辆排名</string>
    <string name="band_car">绑定车辆</string>
    <string name="message_center">消息中心</string>
    <string name="comment_and_like">评论与赞</string>
    <string name="switch_language">切换语言</string>
    <string name="unit_size">尺寸单位</string>
    <string name="attention_matters">注意事项</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="sign_in">签到</string>
    <string name="store">商城</string>
    <string name="aotu">跟随系统</string>
    <string name="my_setting">设置</string>
    <string name="nearby">附近的人</string>
    <string name="activity">活动约伴</string>
    <string name="black_list">黑名单</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about_mw">关于曼威</string>
    <string name="my_profile">我的资料</string>
    <string name="amend">修改</string>
    <string name="complete">完成</string>
    <string name="gold">金币:</string>
    <string name="integral">积分:</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="name">名字</string>
    <string name="signature">签名</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birthday">生日</string>
    <string name="profession">职业</string>
    <string name="address">地址</string>
    <string name="phone_number">手机号</string>
    <string name="e_mail">邮箱</string>
    <string name="change_password">修改密码</string>
    <string name="login_out">退出登录</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="detail">详情</string>
    <string name="comment">评论</string>
    <string name="praise">赞</string>
    <string name="let_me_have_my_say">我来说两句…</string>
    <string name="publish">发表</string>
    <string name="update_dynamic">更新动态</string>
    <string name="the_idea_of_this_moment">这一刻的想法…</string>
    <string name="location">位置</string>
    <string name="my_location">我的位置</string>
    <string name="the_number_of_words_has_reached_the_upper_limit">字数已达到上限</string>
    <string name="ranking">排行榜</string>
    <string name="day">日榜</string>
    <string name="week">周榜</string>
    <string name="total">总榜</string>
    <string name="you_win_mw_players">您已击败了{0}%的车手</string>
    <string name="no">第{0}名</string>
    <string name="you_can_be_ranked_and_get_scores_only_after_vehicle_verification">车辆认证后才能参加排名比拼获得奖励哦~</string>
    <string name="未参与排名">未参与排名</string>
    <string name="无">无</string>
    <string name="vehicle_binding">车辆绑定</string>
    <string name="input_vehicle_sn_number_or_click_inquiry_button">请输入车辆SN号</string>
    <string name="inquiry">查询</string>
    <string name="please_firstly_connect_your_vehicle">请先连接车辆</string>
    <string name="binded_vehicle">已绑定车辆</string>
    <string name="binding_vehicle">绑定车辆</string>
    <string name="comments_on_your_sharing">评论了你的动态</string>
    <string name="praise_your_sharing">赞了你的动态</string>
    <string name="metric">公制</string>
    <string name="submit">提交</string>
    <string name="my_feedback">您的宝贵意见…</string>
    <string name="please_enter_feedback">请填写您的宝贵意见</string>
    <string name="about">关于</string>
    <string name="about_myway">关于曼威</string>
    <string name="introduction">功能介绍</string>
    <string name="terms_and_privacy">条款协议</string>
    <string name="check_update">检查更新</string>
    <string name="shenzhen_myway">深圳曼威科技有限公司</string>
    <string name="velocity">速度</string>
    <string name="total_mileage">总里程</string>
    <string name="battery">电量</string>
    <string name="this_mileage">本次里程</string>
    <string name="connected">连接</string>
    <string name="connecting">连接中</string>
    <string name="disconnect">断开</string>
    <string name="vehicle_management">车辆管理</string>
    <string name="my_vehicle">我的车辆</string>
    <string name="searched_vehicle">搜索车辆</string>
    <string name="look_for_all_vehicle">查看所有车辆</string>
    <string name="all_vehicle">所有车辆</string>
    <string name="not_connected_to_your_car">还未连接到你的爱车</string>
    <string name="more_setting">更多设置</string>
    <string name="record_track">记录轨迹</string>
    <string name="vehicle_diagnose">故障检测</string>
    <string name="mode_switch">模式切换</string>
    <string name="econ">节能</string>
    <string name="sport">运动</string>
    <string name="body_calibration">车身校准</string>
    <string name="max_speed">速度限制</string>
    <string name="light_switch">车灯控制</string>
    <string name="head_light">前灯</string>
    <string name="tail_light">尾灯</string>
    <string name="atmosphere_light">氛围灯</string>
    <string name="glide_start_mode">滑行启动模式</string>
    <string name="glide_start_switch">滑行启动</string>
    <string name="modify_bluetooth_password">修改蓝牙密码</string>
    <string name="firmware_update">固件升级</string>
    <string name="current_firmware_version">当前固件版本</string>
    <string name="go_to_setting">去设置</string>
    <string name="please_open_gps">请打开GPS</string>
    <string name="accelerator_calibration">油门校准</string>
    <string name="fingerprint_register">指纹管理</string>
    <string name="cruise_mode">定速巡航</string>
    <string name="mood_light_mode">灯带模式</string>
    <string name="close">关闭</string>
    <string name="flowing">全彩流水</string>
    <string name="breathing">全彩呼吸</string>
    <string name="neon">炫彩霓虹</string>
    <string name="lighting">照明模式</string>
    <string name="warning">警灯模式</string>
    <string name="ble_old_password">旧密码</string>
    <string name="ble_new_password">新密码</string>
    <string name="ble_confirm_password">确认密码</string>
    <string name="please_press_accelerator_to_the_end_and_hold_on">请将油门按到最大，保持不动，然后开始第一次校准。</string>
    <string name="start_first_calibration">开始第一次校准</string>
    <string name="release_accelerator">请松开油门，然后开始第二次校准。</string>
    <string name="start_second_calibration">开始第二次校准</string>
    <string name="hint">提示</string>
    <string name="fingerprint_identification">指纹识别</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="clear_all_of_registered_fingerprint">清除所有指纹</string>
    <string name="the_fingerprint_database_is_full">指纹库已满，请先删除部分指纹再进行录入！</string>
    <string name="first_finger_identify">第一次录入</string>
    <string name="please_use_your_finger_to_press_on_the_fingerprint_recognition_sensor">请将手指放在车辆指纹传感器上轻按，再移开手指。</string>
    <string name="first_finger_identify_unsuccessfully">第一次录入失败</string>
    <string name="fingerprint_identify_unsuccessfully">指纹图像质量不佳，请重新第一次录入！</string>
    <string name="the_fingerprint_has_been_registered">该指纹已注册，请换另一根手指进行录入！</string>
    <string name="register_unsuccessfully">录入失败！</string>
    <string name="please_exit_first">请先退出指纹录入界面，然后重新进行录入！</string>
    <string name="first_finger_identify_successfully">第一次录入成功</string>
    <string name="please_remove_your_finger_from_fingerprint_recognition_sensor">请将手指从指纹传感器上移开，准备第二次录入。</string>
    <string name="second_finger_identify">第二次录入</string>
    <string name="please_use_the_same_finger_to_press_fingerprint_recognition_sensor">请将同一手指放在指纹传感器上轻按，再移开手指。</string>
    <string name="second_finger_identify_unsuccessfully">第二次录入失败</string>
    <string name="please_reregister_again">指纹图像质量不佳，请重新第二次录入！</string>
    <string name="the_fingerprint_does_not_match_for_the_two_times">该指纹与第一次输入的指纹不匹配，请换回第一次使用的手指进行录入！</string>
    <string name="register_successfully">指纹录入完成</string>
    <string name="you_can_use_your_fingerprint_to_lockunlock_vehicle_now">您可以使用指纹解锁车辆。</string>
    <string name="fingerprint_cannot_be_registered">车辆不是静止状态，不能录入指纹。</string>
    <string name="fingerprint_management">指纹管理</string>
    <string name="please_get_off_the_vehicle">请下车，保持车辆静止，然后开始录入指纹。</string>
    <string name="dialog_continue">继续</string>
    <string name="fault_diagnose">故障检测</string>
    <string name="diagnose">检测</string>
    <string name="finish">完成</string>
    <string name="fault_diagnose_help_to_find_the_question_with_your_vehicle_and_fix_in_time">故障检测可以帮助你及早发现爱车的问题，提交售后维修</string>
    <string name="fault_of_hall">电机霍尔故障</string>
    <string name="fault_of_a_phase_current">A相电流自检故障</string>
    <string name="fault_of_b_phase_current">B相电流自检故障</string>
    <string name="fault_of_c_phase_current">C相电流自检故障</string>
    <string name="fault_of_bus_current">总线电流自检故障</string>
    <string name="fault_of_throttle">油门故障</string>
    <string name="fault_of_MOSFET">MOSFET故障</string>
    <string name="fault_of_communication">主板通信故障</string>
    <string name="fault_of_fingerprint_module">指纹模块通信故障</string>
    <string name="fault_of_GPS">GPS通信故障</string>
    <string name="fault_of_GPRS">GPRS通信故障</string>
    <string name="please_get_off_the_vehicle_and_keep_the_vehicle_still_and_horizontal">请下车，并保持车辆处于水平静止状态。</string>
    <string name="continue_">继续</string>
    <string name="body_cant_be_calibrated_because_the_vehicle_is_not_still_or_horizontal">车辆不是静止状态，不能校准！</string>
    <string name="please_keep_the_vehicle_still_and_horizontal">请保持车辆处于水平静止状态。</string>
    <string name="start_calibration">开始校准</string>
    <string name="l_time">时间：</string>
    <string name="l_state">状态：</string>
    <string name="satellite_positioning">卫星定位</string>
    <string name="latitude_and_longitude">经纬度：</string>
    <string name="l_speed">速度：</string>
    <string name="scores_level">等级：</string>
    <string name="scores_level_1">等级</string>
    <string name="ranking_detail">等级详情</string>
    <string name="mw_coins">M币：</string>
    <string name="scores">积分</string>
    <string name="getting_scores_and_mw_coins">增值攻略</string>
    <string name="method">获取方式</string>
    <string name="coins">金币</string>
    <string name="scores_for_promotion">升级所需积分</string>
    <string name="total_scores">总积分</string>
    <string name="初级车手">初级车手</string>
</resources>