<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10dp">

    <TextView
        android:id="@+id/tv_pingbi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/block"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="15px" />

    <TextView
        android:id="@+id/tv_jubao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="15px" />

    <TextView
        android:id="@+id/tv_detele"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="15px"
        android:visibility="gone" />

</com.zhy.autolayout.AutoLinearLayout>
