<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="80px"
        android:text="@string/hint"
        android:textColor="#fefefe"
        android:textSize="34px"
        android:background="#ffc700"
        android:gravity="center" />

    <TextView
        android:id="@+id/tv_hint_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_get_off_the_vehicle"
        android:textColor="#010101"
        android:textSize="28px"
        android:background="@color/transparency"
        android:paddingLeft="30px"
        android:paddingRight="30px"
        android:layout_marginTop="51px"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="70px"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="64px"
        android:layout_marginBottom="28px"
        android:layout_marginLeft="103px"
        android:layout_marginRight="103px"
        android:background="@drawable/corner_change_finger_name">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="196px"
            android:layout_height="70px"
            android:gravity="center"
            android:text="@string/dialog_cancel"
            android:textColor="#010101"
            android:textSize="32px" />

        <View
            android:layout_width="2px"
            android:layout_height="match_parent"
            android:background="#d2d2d2" />

        <TextView
            android:id="@+id/tv_continue"
            android:layout_width="196px"
            android:layout_height="70px"
            android:gravity="center"
            android:text="@string/dialog_continue"
            android:textColor="#010101"
            android:textSize="32px" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
