<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20px"
    android:background="@mipmap/img_bg_xiugaimingchen">

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:hint="@string/ble_old_password"
        android:textColorHint="@color/whitesmoke"
        android:textColor="@color/white"
        android:inputType="number"
        android:maxLength="6"
        android:padding="20px"
        android:layout_marginTop="10px"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparency"
        android:visibility="gone"/>

    <View
        android:layout_width="540px"
        android:layout_height="1px"
        android:background="@color/whitesmoke"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:hint="@string/ble_new_password"
        android:textColorHint="@color/whitesmoke"
        android:textColor="@color/white"
        android:inputType="number"
        android:maxLength="6"
        android:padding="20px"
        android:layout_marginTop="10px"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparency" />

    <View
        android:layout_width="540px"
        android:layout_height="1px"
        android:background="@color/whitesmoke" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="540px"
        android:layout_height="wrap_content"
        android:hint="@string/ble_confirm_password"
        android:textColorHint="@color/whitesmoke"
        android:textColor="@color/white"
        android:inputType="number"
        android:maxLength="6"
        android:padding="20px"
        android:layout_marginTop="10px"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparency" />

    <View
        android:layout_width="540px"
        android:layout_height="1px"
        android:background="@color/whitesmoke" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="280px"
            android:layout_height="120px"
            android:layout_marginTop="40px"
            android:text="@string/dialog_cancel"
            android:textColor="@color/white"
            android:textSize="34px"
            android:gravity="center"
            android:background="@mipmap/xiugaimingchen_btn_quxiao"/>

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="280px"
            android:layout_height="120px"
            android:layout_marginTop="40px"
            android:text="@string/dialog_confirm"
            android:textColor="@color/black"
            android:textSize="34px"
            android:gravity="center"
            android:background="@mipmap/xiugaimingchen_btn_queding"/>

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
