<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_grade_and_gold"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mywaytec.myway.ui.gradeAndGold.GradeAndGoldActivity"
    tools:showIn="@layout/activity_grade_and_gold">

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="496px"
        android:background="@mipmap/cebianlan_jifen_bg">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="45px"
            android:layout_height="45px"
            android:layout_marginLeft="28px"
            android:layout_marginTop="65px"
            android:src="@mipmap/icon_finish" />

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="44px"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.mywaytec.myway.view.CircleImageView
                android:id="@+id/img_head_portrait"
                android:layout_width="120px"
                android:layout_height="120px"
                android:src="@mipmap/icon_default" />

            <TextView
                android:id="@+id/tv_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21px"
                android:text=""
                android:textColor="@color/white"
                android:textSize="30px" />

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="43px"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scores_level"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <TextView
                    android:id="@+id/tv_driver_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/初级车手"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20px"
                    android:layout_marginRight="20px"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mw_coins"
                    android:textColor="@color/white"
                    android:textSize="24px" />

                <TextView
                    android:id="@+id/tv_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="24px" />

            </com.zhy.autolayout.AutoLinearLayout>

            <com.zhy.autolayout.AutoLinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="37px"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="328px"
                    android:layout_height="6px"
                    android:max="80"
                    android:progress="0"
                    android:progressDrawable="@drawable/progress_bar_level" />

                <TextView
                    android:id="@+id/tv_jinfen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12px"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18px" />

            </com.zhy.autolayout.AutoLinearLayout>

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:paddingTop="34px">

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/layout_access_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_access"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getting_scores_and_mw_coins"
                android:textColor="#333333"
                android:textSize="30px" />

            <View
                android:id="@+id/view_access"
                android:layout_width="90px"
                android:layout_height="4px"
                android:layout_marginTop="17px"
                android:background="#04a3ff" />

        </com.zhy.autolayout.AutoLinearLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:id="@+id/layout_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="116px"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ranking_detail"
                android:textColor="#999999"
                android:textSize="30px" />

            <View
                android:id="@+id/view_level"
                android:layout_width="90px"
                android:layout_height="4px"
                android:layout_marginTop="17px"
                android:background="#04a3ff"
                android:visibility="invisible" />

        </com.zhy.autolayout.AutoLinearLayout>

    </com.zhy.autolayout.AutoLinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="18px"
        android:background="#fafafa" />

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_access"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="31px"
        android:paddingLeft="28px"
        android:paddingRight="28px">


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/method"
                android:textColor="#333333"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/scores"
                android:textColor="#000000"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/coins"
                android:textColor="#333333"
                android:textSize="30px" />

        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#fafafa" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_access"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

    </com.zhy.autolayout.AutoLinearLayout>

    <com.zhy.autolayout.AutoLinearLayout
        android:id="@+id/layout_level"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="31px"
        android:paddingLeft="28px"
        android:paddingRight="28px"
        android:visibility="gone">


        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30px">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingLeft="74px"
                android:text="@string/scores_level_1"
                android:textColor="#333333"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/scores_for_promotion"
                android:textColor="#000000"
                android:textSize="30px" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total_scores"
                android:textColor="#333333"
                android:textSize="30px" />

        </com.zhy.autolayout.AutoLinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#fafafa" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_level"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">

        </android.support.v7.widget.RecyclerView>

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
